attempt to fix spacing of contact links in mobile

--- a/src/styles/components/_arcade.scss
+++ b/src/styles/components/_arcade.scss
@@ -104,7 +104,7 @@
     margin: 0 0;
     text-align: center;
     @media (max-width: $mobile-max) {
-      font-size: 28px;
+      font-size: 24px;
     }
   }
 
@@ -144,12 +144,13 @@
     padding: 25px;
     .contact-links {
       justify-content: start;
-      margin-top: 5px;
+      margin-top: 15px;
       align-items: center;
       li {
-        margin-top: 10px;
+        margin: 5px 0;
         width: 100%;
-        height: 30px;
+        height: 24px;
+        display: block;
       }
     }
   }
